testing this pop up fix

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,7 +26,7 @@ body > .region,
 #footer,
 .region-user-menu,
 .main-prefix-section-wrapper {
-  float: left;
+  /*float: left;*/
   width: 100%;
 }
 
