the float left on .section-content is causing cwrc-writer popups to not show up, this is a test branch

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,11 +22,20 @@
 
 }
 
-body > .region,
-#footer,
-.region-user-menu,
-.main-prefix-section-wrapper {
+body > .region{
   /*float: left;*/
+  width: 100%;
+}
+.section-content{
+  width: 100%;
+}
+#footer {
+  float: left;
+  width: 100%;
+}
+
+.main-prefix-section-wrapper {
+  float: left;
   width: 100%;
 }
 
