CWRC-959: Visually-hide the Welcome Message label.

--- a/sass/components/_blocks.scss
+++ b/sass/components/_blocks.scss
@@ -11,6 +11,7 @@
 @import 'blocks/block--what-are-we';
 @import 'blocks/block--homepage-sponsors';
 @import 'blocks/block--menu-block-2';
+@import 'blocks/block--cwrc_projects-project_group_join';
 
 /* =============================================================================
     GENERAL BLOCK STYLES
