--- a/sass/components/dashboard/_dashboard-project.scss
+++ b/sass/components/dashboard/_dashboard-project.scss
@@ -25,7 +25,7 @@
 
 //HEADERS
 
-#block-cwrc-dashboards-project-locked-objects {
+#block-cwrc-dashboards-project-locked-objects, #block-cwrc-dashboards-user-locked-objects {
   h2:before {
     @extend %icon-locked;
   }
@@ -56,6 +56,7 @@
 }
 
 #block-cwrc-dashboards-project-locked-objects,
+#block-cwrc-dashboards-user-locked-objects,
 #block-cwrc-dashboards-project-utilities,
 #block-views-project-members-block {
   h2:before {
