hide body field on project overviews view.  it is added so that title can be added to the img title and alt attribs

--- a/css/de_theme.css
+++ b/css/de_theme.css
@@ -10737,7 +10737,9 @@ div#BRnavline {
   font-weight: 900;
   line-height: 1.6;
 }
-
+.view-display-id-page_grid_3 .node-project .field-name-body {
+    display: none;
+}
 .sidebar .block form#views-exposed-form-project-overview-page-grid-3 input[type=checkbox] {
   width: auto;
 }
